--- a/MebelMarket/MebelMarket/appsettings.json
+++ b/MebelMarket/MebelMarket/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "ProductionConnectionString": "Server=localhost;Database=u1452444_techresearch;User=u1452444_techresearch_admin;Password=%W%ind0w5764%",
+    "DevelopmentConnectionString": "Server=u1452444.plsk.regruhosting.ru;Database=u1452444_techresearch;User=u1452444_techresearch_admin;Password=%W%ind0w5764%",
+    "ProviderName": "System.Data.SqlClient"
+  }
 }
