--- a/MebelMarket/MebelMarket/appsettings.json
+++ b/MebelMarket/MebelMarket/appsettings.json
@@ -10,7 +10,7 @@
 
   "ConnectionStrings": {
     "ProductionConnectionString": "Server=localhost;Database=u1452444_techresearch;User=u1452444_techresearch_admin;Password=%W%ind0w5764%",
-    "DevelopmentConnectionString": "Server=u1452444.plsk.regruhosting.ru;Database=u1452444_techresearch;User=u1452444_techresearch_admin;Password=%W%ind0w5764%",
+    "DevelopmentConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=MebelMarket;Trusted_Connection=True;",
     "ProviderName": "System.Data.SqlClient"
   }
 }
