--- a/MebelMarket/MebelMarket/appsettings.json
+++ b/MebelMarket/MebelMarket/appsettings.json
@@ -9,8 +9,11 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "ProductionConnectionString": "Server=localhost;Database=u1452444_techresearch;User=u1452444_techresearch_admin;Password=%W%ind0w5764%",
-    "DevelopmentConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=MebelMarket;Trusted_Connection=True;",
-    "ProviderName": "System.Data.SqlClient"
+    "ProductionConnectionString": "",
+    "DevelopmentConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=MebelMarket;Trusted_Connection=True;"
+  },
+
+  "JwtSettings": {
+    "Secret": "u8ubBEjpvPsr5aJ3JN68KxQNW7wjq5Y8"
   }
 }
