--- a/mebelmarket.web/package.json
+++ b/mebelmarket.web/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.1",
+    "vue-meta": "^3.0.0-alpha.7",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
